feat: allow users to customize Kanji filter (#348)
* fix: font size is too small, which is related to tailwind v4

* chore: update pnpm

* fix: icons on the sidebar are incorrect

* feat: rename "Rules editor" page to "Selector"

* chore: update outdated biome vscode configuration

* feat: change the Selector page icon to `i-tabler-click`

* feat(wip): add Kanji Filter page placeholder

* refactor: store Kanji filter rules in indexeddb

* chore: dup key

* chore: add comment

* fix: `isLoading` variable should not be modified before loading is complete

* chore: comment style

* refactor: using `??` and `?.`

* refactor: extract `getDB` util

* feat(wip): display the data in indexeddb on the options page

* fix: mobile devices cannot trigger hover, resulting in inaccessible delete entry

* feat: allows to delete specific kanji filter

* refactor: rename components

* fix: react error "Each child in a list should have a unique "key" prop"

* fix: react error "Invalid prop data-headlessui-state supplied to React.Fragment."

* chore: import tailwind-merge and clsx

* refactor: rename "reading" to "katakanas"

* feat(wip): allow edit existed kanji filter rules

* fix: missing i18n

* fix: placeholder text typo

* style: adjust padding

* style: add required tag

* feat: allows reset config

* feat: allow clear config

* style: adjust padding when the yomikata count is 0

* chore: fix typo

* feat: allow add new rule

* style: the plus icon does not hide when typing yomikata continuously

* style: add placeholder

* feat: allows clear config

* style: add element order tag

* fix: extra single quotes in yomikata

* chore: adjust user guide

* style: adjust icon color

* style: adjust disabled state style

* feat: verify that the input must be kanji and katakana

* chore: adjust text

* feat: allow import json data

* feat: add "required" error message

* fix: react error "In HTML, <button> cannot be a descendant of <button>."

* style: adjust required tag location to bef

--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -10,7 +10,8 @@
     "postinstall": "wxt prepare",
     "typecheck": "tsc --noEmit",
     "test:unit": "vitest -r __TEST__/unit",
-    "test:e2e": "playwright test"
+    "test:e2e:prod": "playwright test",
+    "test:e2e:dev": "NODE_ENV=development pnpm exec playwright test --ui"
   },
   "dependencies": {
     "@ctrl/tinycolor": "^4.1.0",
@@ -19,15 +20,18 @@
     "@js-temporal/polyfill": "catalog:",
     "@sglkc/kuromoji": "^1.1.0",
     "@webext-core/messaging": "^2.1.0",
+    "clsx": "catalog:",
     "file-saver": "^2.0.5",
     "i18next": "^24.1.2",
+    "idb": "^8.0.3",
     "next-themes": "^0.4.4",
     "react": "catalog:",
     "react-dom": "catalog:",
-    "react-i18next": "15.2.0",
+    "react-i18next": "15.5.3",
     "react-markdown": "^9.0.1",
     "react-router": "catalog:",
     "react-share": "^5.1.1",
+    "tailwind-merge": "catalog:",
     "wanakana": "^5.3.1",
     "zod": "^3.24.1"
   },
@@ -40,6 +44,7 @@
     "@tailwindcss/forms": "catalog:",
     "@tailwindcss/typography": "catalog:",
     "@tailwindcss/vite": "catalog:",
+    "@total-typescript/ts-reset": "catalog:",
     "@types/file-saver": "^2.0.7",
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
