--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,22 +1,25 @@
 packages:
- - apps/*
+  - apps/*
 
 catalog:
-    "@egoist/tailwindcss-icons": "^1.9.0"
-    "@iconify-json/fa6-brands": "^1.2.5"
-    "@headlessui/react": "^2.2.3"
-    "@headlessui/tailwindcss": "^0.2.2"
-    "@js-temporal/polyfill": "^0.4.4"
-    "@react-router/cloudflare": "^7.1.0"
-    "@react-router/dev": "^7.1.0"
-    "@react-router/fs-routes": "^7.1.0"
-    "@tailwindcss/forms": "^0.5.9"
-    "@tailwindcss/typography": "^0.5.16"
-    "@tailwindcss/vite": "^4.1.7"
-    "@types/react": "^19.0.1"
-    "@types/react-dom": "^19.0.2"
-    "react": "^19.0.0"
-    "react-dom": "^19.0.0"
-    "react-router": "^7.1.0"
-    "tailwindcss": "^4.1.7"
-    "vite": "^6.3.5"
+  '@egoist/tailwindcss-icons': ^1.9.0
+  '@iconify-json/fa6-brands': ^1.2.5
+  '@headlessui/react': ^2.2.3
+  '@headlessui/tailwindcss': ^0.2.2
+  '@js-temporal/polyfill': ^0.4.4
+  '@react-router/cloudflare': ^7.1.0
+  '@react-router/dev': ^7.1.0
+  '@react-router/fs-routes': ^7.1.0
+  '@tailwindcss/forms': ^0.5.9
+  '@tailwindcss/typography': ^0.5.16
+  '@tailwindcss/vite': ^4.1.7
+  '@total-typescript/ts-reset': ^0.4.2
+  '@types/react': ^19.0.1
+  '@types/react-dom': ^19.0.2
+  clsx: ^2.1.1
+  react: ^19.0.0
+  react-dom: ^19.0.0
+  react-router: ^7.1.0
+  tailwindcss: ^4.1.7
+  tailwind-merge: ^3.3.1
+  vite: ^6.3.5
