--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -21,6 +21,7 @@
     "@sglkc/kuromoji": "^1.1.0",
     "@webext-core/messaging": "^2.1.0",
     "clsx": "catalog:",
+    "es-toolkit": "catalog:",
     "file-saver": "^2.0.5",
     "i18next": "^24.1.2",
     "idb": "^8.0.3",
@@ -51,6 +52,7 @@
     "@vitejs/plugin-react-swc": "^3.7.2",
     "@wxt-dev/auto-icons": "^1.0.2",
     "kuromojin": "^3.0.0",
+    "react-scan": "catalog:",
     "tailwindcss": "catalog:",
     "vite-plugin-svgr": "^4.3.0",
     "vitest": "^3.0.0",
