--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -17,9 +17,11 @@ catalog:
   '@types/react': ^19.0.1
   '@types/react-dom': ^19.0.2
   clsx: ^2.1.1
+  es-toolkit: ^1.39.8
   react: ^19.0.0
   react-dom: ^19.0.0
   react-router: ^7.1.0
+  react-scan: ^0.4.3
   tailwindcss: ^4.1.7
   tailwind-merge: ^3.3.1
   vite: ^6.3.5
