--- a/biome.json
+++ b/biome.json
@@ -24,7 +24,7 @@
     }
   },
   "files": {
-    "includes": ["!tailwind.css"]
+    "includes": ["**", "!**/tailwind.css"]
   },
   "linter": {
     "enabled": true,
