--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -34,7 +34,8 @@
     "react-share": "^5.1.1",
     "tailwind-merge": "catalog:",
     "wanakana": "^5.3.1",
-    "zod": "^4.0.0"
+    "zod": "^4.0.0",
+    "zustand": "catalog:"
   },
   "devDependencies": {
     "@egoist/tailwindcss-icons": "catalog:",
