feat: migrate from kuromoji.js to lindera-wasm (#410)
* refactor: use `lindera-wasm-ipadic` to replace `kuromoji`

* feat: migrate to lindera-wasm

* fix: lindera initialization failed

* test: fix e2e

* chore: revert useless changes

* test: check that the automatic addition of furigana is working properly

* test: add playground e2e tests

* chore: update type deps

* fix: lindera-wasm requires 'wasm-unsafe-eval' in CSP

* chore: remove useless test

* ci: split e2e testing CI

* ci: lint workflow is uploading a playwright-report artifact, removed

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Lint & TypeCheck & Test
+name: E2E Test
 permissions:
   contents: read
 on:
@@ -27,15 +27,6 @@ jobs:
           cache: 'pnpm'
           cache-dependency-path: 'pnpm-lock.yaml'
       - run: pnpm install --frozen-lockfile
-
-      - name: Lint
-        run: pnpm run lint
-
-      - name: TypeCheck
-        run: pnpm run typecheck
-
-      - name: Unit Test
-        run: pnpm run test:unit
 
       - name: Build the extension
         run: pnpm --filter extension run build
