--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -49,6 +49,7 @@ jobs:
             Please refer to [CHANGELOG.md](https://github.com/${{ github.repository }}/blob/main/apps/extension/CHANGELOG.md) for details.
             ## Download
             - [Chrome](https://chromewebstore.google.com/detail/furigana-maker/heodojceeinbkfjfilnfminlkgbacpfp)
+            - [Edge](https://microsoftedge.microsoft.com/addons/detail/furigana-maker/kohpoklaaeicnkdapjkmljdachedmbbi)
         run: |
          gh release upload ${{ needs.release-please.outputs.tag_name }} ./.output/*-chrome.zip
          gh release edit ${{ needs.release-please.outputs.tag_name }} --notes "$RELEASE_NOTES"
@@ -58,8 +59,12 @@ jobs:
         run: |
           pnpm --filter extension exec wxt submit \
             --chrome-zip ./.output/*-chrome.zip \
+            --edge-zip ./.output/*-chrome.zip \
         env:
           CHROME_EXTENSION_ID: ${{ secrets.CHROME_EXTENSION_ID }}
           CHROME_CLIENT_ID: ${{ secrets.CHROME_CLIENT_ID }}
           CHROME_CLIENT_SECRET: ${{ secrets.CHROME_CLIENT_SECRET }}
           CHROME_REFRESH_TOKEN: ${{ secrets.CHROME_REFRESH_TOKEN }}
+          EDGE_PRODUCT_ID: ${{ secrets.EDGE_PRODUCT_ID }}
+          EDGE_CLIENT_ID: ${{ secrets.EDGE_CLIENT_ID }}
+          EDGE_API_KEY: ${{ secrets.EDGE_API_KEY }}
