--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,8 @@
   },
   "i18n-ally.localesPaths": ["apps/extension/src/assets/_locales"],
   "i18n-ally.keystyle": "flat",
-  "i18n-ally.enabledFrameworks": ["react-i18next"]
+  "i18n-ally.enabledFrameworks": ["react-i18next"],
+  "[typescriptreact]": {
+    "editor.defaultFormatter": "vscode.typescript-language-features"
+  }
 }
